syntax = "proto2";

package apiserver;
option java_package="com.tencent.client.apiserver.protos";
option java_outer_classname="MSGProtos";

message TensorProto{
    optional int32 matId = 1;
    required string name = 2;
    required int32 dim = 3;
    repeated int64 shape = 4;
    required string dtype = 5;
    optional int64 validIndexNum = 6 [default = -1];
    map<string, string> initializerParams = 7;
}

message VariableProto {
    optional int32 matId = 1;
    required string name = 2;
    required int32 dim = 3;
    repeated int64 shape = 4;
    required string dtype = 5;
    optional int64 validIndexNum = 6 [default = -1];
    map<string, string> initializerParams = 7;
    map<string, string> updaterParams = 8;
}

message EmbeddingProto {
    required string name = 1;
    required int64 numFeats = 2;
    required int32 embeddingSize = 3;
    required string dtype = 4;
    map<string, string> initializerParams = 6;
    map<string, string> updaterParams = 7;
}

message LoadTensorLikeProto{
    required string path = 1;
    map<string, string> conf = 2;
}

message SaveTensorLikeProto{
    required string path = 1;
    required string formatClassName = 2;
}

message Request {
    required int32 pid = 1;
    required int64 funcId = 2;
    optional int32 matId = 3;
    optional int32 epoch = 4;
    optional int32 batch = 5;
    optional int32 batchSize = 6;
    oneof data {
        TensorProto tensor = 10;
        VariableProto variable = 11;
        EmbeddingProto embed = 12;
        LoadTensorLikeProto loadInfo = 13;
        SaveTensorLikeProto saveInfo = 14;
        bytes objectId = 15;
    }
}

message Response {
    required int32 pid = 1;
    required int64 funcId = 2;
    optional int32 matId = 3;
    required int32 ret = 4;
    optional string errorMsg = 5;
    optional bytes objectId = 6;
}